
[TestRootCommandSuite/TestShouldExitEarlyWhenConflictResolutionFlagIsInvalid - 1]
DEBU command has been called with the following flags: --source-directory=/home/golang/dfsync, --dry=false, --conflict-resolution=bar
ERRO invalid value passed to --conflict-resolution flag, received bar

---

[TestRootCommandSuite/TestShouldExitEarlyWhenPathPassedToSourceDirectoryOptionDoesNotExist - 1]
DEBU command has been called with the following flags: --source-directory=/foo/bar/buzz, --dry=false, --conflict-resolution=no-action
ERRO path passed to --source-directory option does not exist, received /foo/bar/buzz

---

[TestRootCommandSuite/TestShouldExitEarlyWhenPathPassedToSourceDirectoryOptionIsNotDirectory - 1]
DEBU command has been called with the following flags: --source-directory=/tmp/foo.txt, --dry=false, --conflict-resolution=no-action
ERRO path passed to --source-directory option is not directory, received /tmp/foo.txt

---

[TestRootCommandSuite/TestShouldExitEarlyWhenSourceDirectoryIsEmpty - 1]
DEBU command has been called with the following flags: --source-directory=/tmp/source/, --dry=false, --conflict-resolution=no-action
ERRO directory passed to --source-directory option is empty, received /tmp/source/

---

[TestRootCommandSuite/TestShouldDoNothingWhenFileExistsAndNoActionIsPassedToConflictResolutionOption - 1]
DEBU command has been called with the following flags: --source-directory=/tmp/source/, --dry=false, --conflict-resolution=no-action
DEBU home directory: /home/golang/
DEBU absolute path to source directory: /tmp/source
DEBU processing path: /tmp/source
DEBU visiting source directory, no action required
DEBU processing path: /tmp/source/foo.txt
WARN path /home/golang/foo.txt already exists, symlink will not be created because --conflict-resolution flag is set to no-action

---

[TestRootCommandSuite/TestShouldCreateBackupFilesWhenFileExistsAndBackupIsPassedToConflictResolutionOption - 1]
DEBU command has been called with the following flags: --source-directory=/tmp/source/, --dry=false, --conflict-resolution=backup
DEBU home directory: /home/golang/
DEBU absolute path to source directory: /tmp/source
DEBU processing path: /tmp/source
DEBU visiting source directory, no action required
DEBU processing path: /tmp/source/foo.txt
WARN path /home/golang/foo.txt already exists, the file will be backed up and symlink will be created because --conflict-resolution flag is set to backup
INFO file has been successfully backup up under /home/golang/foo.txt.bak
INFO symlink from "/tmp/source/foo.txt" to "/home/golang/foo.txt" created

---

[TestRootCommandSuite/TestShouldCreateBackupFileWhenFileExistsAndBackupIsPassedToConflictResolutionOption - 1]
DEBU command has been called with the following flags: --source-directory=/tmp/source/, --dry=false, --conflict-resolution=backup
DEBU home directory: /home/golang/
DEBU absolute path to source directory: /tmp/source
DEBU processing path: /tmp/source
DEBU visiting source directory, no action required
DEBU processing path: /tmp/source/foo.txt
WARN path /home/golang/foo.txt already exists, the file will be backed up and symlink will be created because --conflict-resolution flag is set to backup
INFO file has been successfully backup up under /home/golang/foo.txt.bak
INFO symlink from "/tmp/source/foo.txt" to "/home/golang/foo.txt" created

---

[TestRootCommandSuite/TestShouldOverrideFileWhenFileExistsAndOverrideIsPassedToConflictResolutionOption - 1]
DEBU command has been called with the following flags: --source-directory=/tmp/source/, --dry=false, --conflict-resolution=override
DEBU home directory: /home/golang/
DEBU absolute path to source directory: /tmp/source
DEBU processing path: /tmp/source
DEBU visiting source directory, no action required
DEBU processing path: /tmp/source/foo.txt
WARN path /home/golang/foo.txt already exists, the file will be deleted and symlink will be created because --conflict-resolution flag is set to override
INFO symlink from "/tmp/source/foo.txt" to "/home/golang/foo.txt" created

---
